:star: added page and api routes :sunglasses:

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-reveal": "^1.2.2",
     "vercel": "^20.1.2"
   }
 }
