--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "-": "0.0.1",
     "axios": "^0.20.0",
+    "gsap": "^3.5.1",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
