--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-reveal": "^1.2.2",
+    "ua-parser-js": "^0.7.22",
     "vercel": "^20.1.2"
   }
 }
